--- a/index.html
+++ b/index.html
@@ -75,47 +75,47 @@
       <section class="container">
         <aside class="aside1">
           <div>
-            <img src="/airbnbImages/img1.webp" alt="" srcset="" />
+            <img src="airbnbImages/img1.webp" alt="" srcset="" />
             <span>Icons</span>
           </div>
           <div>
-            <img src="/airbnbImages/img2.jpg" alt="" srcset="" />
+            <img src="airbnbImages/img2.jpg" alt="" srcset="" />
             <span>Amazing views</span>
           </div>
           <div>
-            <img src="/airbnbImages/img3.jpg" alt="" srcset="" />
+            <img src="airbnbImages/img3.jpg" alt="" srcset="" />
             <span>Amazing pools</span>
           </div>
           <div>
-            <img src="/airbnbImages/img4.jpg" alt="" srcset="" />
+            <img src="airbnbImages/img4.jpg" alt="" srcset="" />
             <span>Farms</span>
           </div>
           <div>
-            <img src="/airbnbImages/img5.jpg" alt="" srcset="" />
+            <img src="airbnbImages/img5.jpg" alt="" srcset="" />
             <span>Treehouses</span>
           </div>
           <div>
-            <img src="/airbnbImages/img6.jpg" alt="" srcset="" />
+            <img src="airbnbImages/img6.jpg" alt="" srcset="" />
             <span>Camping</span>
           </div>
           <div>
-            <img src="/airbnbImages/img7.jpg" alt="" srcset="" />
+            <img src="airbnbImages/img7.jpg" alt="" srcset="" />
             <span>Beachfront</span>
           </div>
           <div>
-            <img src="/airbnbImages/img8.jpg" alt="" srcset="" />
+            <img src="airbnbImages/img8.jpg" alt="" srcset="" />
             <span>OMG!</span>
           </div>
           <div>
-            <img src="/airbnbImages/img9.jpg" alt="" srcset="" />
+            <img src="airbnbImages/img9.jpg" alt="" srcset="" />
             <span>Rooms</span>
           </div>
           <div>
-            <img src="/airbnbImages/img10.jpg" alt="" srcset="" />
+            <img src="airbnbImages/img10.jpg" alt="" srcset="" />
             <span>Cabins</span>
           </div>
           <div>
-            <img src="/airbnbImages/img11.jpg" alt="" srcset="" />
+            <img src="airbnbImages/img11.jpg" alt="" srcset="" />
             <span>Lakefront</span>
           </div>
         </aside>
