--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
+    <meta name="google-site-verification" content="TncNHmyBU9N6Qk64BBuj2zpfnncs30Ids4XSSCx1lhg" />
   </head>
   <body>
     <header id="header1">
